modules/grammars/ide/src/test/resources/cocos/valid/IncludeExcludedModule1.ide
package valid

typedef module IncludeExcludedModule1 {

}
