modules/grammars/ide/src/test/resources/cocos/invalid/IncludeExcludedModule1.ide
package invalid

typedef module IncludeExcludedModule1 {

}
